--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ img {
     height: 10px;
     display: Inline;
     font-size: 14px;
-    color: #ffffff
+    color: #ffffff;
 }
 
 /* Bar chart stuff */
