--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,9 @@ a {
   font-size: 18px;
   color: #F3F3F3;
   line-height: 28px;
+  padding:10px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 #skillsH3 {
