--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,8 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #ffffff;
-  font-style: bold;
+  background-color: #484848;
+  font-weight: bold;
 }
 
 .flex-box {
