--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ ul {
 
 
 .biopic {
-  float: left;
+  float: right;
   padding: 10px;
   width: 200px;
   display: none;
@@ -159,7 +159,7 @@ ul {
 img {
   padding: 10px;
   width: 350px;
-  align: right;
+  
 }
 
 
