--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ a {
   padding:15px;
   padding-left: 10%;
   padding-right: 10%;
+  width: 33%;
   float: left;
 }
 
@@ -151,9 +152,9 @@ ul {
 
 
 .biopic {
-  float: right;
+  float: left;
   padding: 10px;
-  width: 200px;
+  width: 33%;
   display: inline;
   border-radius: 90px;
   -moz-border-radius: 90px; 
@@ -180,9 +181,9 @@ img {
 }
 
 #summary {
-    width:200 ;
+    width:33 ;
     display: inline;
-    float: center;
+    float: left;
 }
 
 span {
