--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ a {
   padding:15px;
   padding-left: 10%;
   padding-right: 10%;
-  width: 33%;
   float: left;
 }
 
@@ -152,9 +151,9 @@ ul {
 
 
 .biopic {
-  float: left;
+  float: right;
   padding: 10px;
-  width: 33%;
+  width: 200%;
   display: inline;
   border-radius: 90px;
   -moz-border-radius: 90px; 
