--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ ul {
 .biopic {
   float: right;
   padding: 10px;
-  width: 200%;
+  width: 200px;
   display: inline;
   border-radius: 90px;
   -moz-border-radius: 90px; 
