--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ ul {
 .biopic {
   float: right;
   padding: 10px;
-  width: 200px;
+  width: 100px;
+  height: 100px;
   display: inline;
   border-radius: 90px;
   -moz-border-radius: 90px; 
