--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 
 
-.education-entry, .work-entry, .project-entry, .certification-entry {
+.education-entry, .work-entry, .project-entry, .certification-entry, .software-entry {
   padding-left: 5%;
   padding-right: 5%;
 }
