--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+.rating_bar {
+    /*this class creats 5 stars bar with empty stars */
+    /*each star is 16 px, it means 5 stars will make 80px together */
+    width: 80px;
+    /*height of empty star*/
+    height: 16px;
+    /*background image with stars */
+    background: url(/images/stars.png);
+    /*which will be repeated horizontally */
+    background-repeat: repeat-x;
+    /* as we are using sprite image, we need to position it to use right star, 
+    //0 0 is for empty */
+    background-position: 0 0;
+    /* align inner div to the left */
+    text-align: left;
+}
+.rating {
+    /* height of full star is the same, we won't specify width here */
+    height: 16px;
+    /* background image with stars */
+    background: url(/images/stars.png);
+    /* now we will position background image to use 16px from top, 
+    //which means use full stars */
+    background-position: 0 -16px;
+    /* and repeat them horizontally */
+    background-repeat: repeat-x;
+}
+Then you need to calculate percentage of your rating, to use this percentage in div width. To calculate percentage of your rating you can use this simple formula: round((rating/max_rating)*100).
+
+For example, if we have maximal possible rating 5, and current rating is 2, then percentage is:
+
+round((2
+
+
+
+
+
+
+
+
+
+
+
+
 *{
     padding:0;
     margin:0;
