--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ a {
 }
 
 .dark-gray {
-  background-color: #4A4A4A;
+  /*background-color: #4A4A4A*/;
+  background-color: #1280C9;
 }
 
 /* TODO: Replace with image later */
