--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,8 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  /*background-color: #484848*/;
+  background-color: #1280C9;
   font-weight: bold;
 }
 
