--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,8 @@ a {
 }
 
 .orange {
-  background-color: #F5AE23;
+  /*background-color: #F5AE23;*/
+  background-color: #BBC4C9;
 }
 
 .orange-text {
