--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ a {
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #F3F3F3;
+  color: #BBC4C9;
+  /*color: #F3F3F3;*/
   line-height: 28px;
   padding:15px;
   padding-left: 10%;
